Add and delete task from local storage

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <input type="text" name="title" id="texInput" class="form-control"><br>
             <div id="msg"></div>
             <label for="dateInput">Due Date</label> 
-            <input type="date" name="" id="dateInput" class="form-control"><br>
+            <input type="text" name="" id="dateInput" class="form-control"><br>
             <label for="textArea">Description</label> <br>
             <textarea name="" id="textArea" cols="30" rows="10" class="descrpt"></textarea>
           </div>
@@ -63,7 +63,7 @@
           </div>
         </div>
       </div>
-      <div class="col-12 col-lg-4 d-flex" >
+      <div class="col-12 col-lg-4 d-flex" id="droppable">
         <div id="in-progress" class="card border-light mb-3 lane flex-grow-1">
           <div class="card-header bg-white" >
             <h2 class="card-title mb-1">In Progress</h2>
