Creating a Proffessional ReadMe

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
           </div>
           <div class="modal-body">
            <label for="texInput"> Task Title</label> 
-            <input type="text" name="title" id="texInput" class="form-control"><br>
+            <input type="text" name="title" id="texInput" class="form-control" autocomplete='off'><br>
             <div id="msg"></div>
             <label for="dateInput">Due Date</label> 
-            <input type="text" name="" id="dateInput" class="form-control"><br>
+            <input type="text" name="" id="dateInput" class="form-control" autocomplete='off'><br>
             <label for="textArea">Description</label> <br>
             <textarea name="" id="textArea" cols="30" rows="10" class="descrpt"></textarea>
           </div>
