--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </div>
           <div class="modal-footer">
             <button type="button" id="close" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button id="add-btn" type="submit" class="btn btn-primary">Add Task</button>
+            <button id="add-btn" type="submit" class="btn btn-primary" data-bs-dismiss="modal">Add Task</button>
           </div>
         </div>
       </div>
